--- a/FontendPlatzi/css/style.css
+++ b/FontendPlatzi/css/style.css
@@ -66,3 +66,32 @@ body {
     color: white;
 }
 
+/* Seccion del main */
+
+.main {
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main__title {
+    color: white;
+    font-size: 25px;
+}
+
+.input {
+    outline: none;
+    background: rgba(255, 255, 255, .1);
+    border: 2px solid white;
+    border-radius: 25px;
+    color: white;
+    font-family: 'Muli', sans-serif;
+    font-size: 16px;
+    height: 50px;
+    padding: 0 20px;
+    width: 70%;
+}
+::placeholder {
+    color: white;
+}
