--- a/FontendPlatzi/css/style.css
+++ b/FontendPlatzi/css/style.css
@@ -95,3 +95,44 @@ body {
 ::placeholder {
     color: white;
 }
+
+/* Carrusel (carousel) */
+.carousel {
+    width: 100%;
+    overflow: scroll;
+    padding: 30px;
+    position: realtive;
+}
+
+.carousel__container {
+    white-space: nowrap;
+    margin: 70px 0;
+    padding-bottom: 10px;
+}
+
+.carousel__item {
+    background: violet;
+    width: 200px;
+    height: 250px;
+    border-radius: 20px;
+    overflow: hidden;
+    margin-right: 10px;
+    display: inline-block;
+    cursor: pointer;
+    transition: .45s;
+    transform-origin: center left;
+}
+
+.carousel__item:hover ~ .carousel__item{
+    transform: translate3d(100px, 0, 0);
+}
+
+.carousel__container:hover .carousel__item{
+    opacity: .3;
+}
+
+.carousel__container:hover .carousel__item:hover {
+    transform: scale(1.5);
+    opacity: 1;
+}
+
