--- a/FontendPlatzi/css/style.css
+++ b/FontendPlatzi/css/style.css
@@ -156,6 +156,12 @@ body {
     left: 0;
     bottom: 0;
     right: 0;
+    display: flex;
+    flex-direction: column;
+    align-content: flex-end;
+    color: white;
 }
 
-
+.carousel-item__details:hover {
+    opacity: 1;
+}
