--- a/FontendPlatzi/css/login.css
+++ b/FontendPlatzi/css/login.css
@@ -35,8 +35,11 @@ body {
     border-radius: 40px;
     color: white;
     padding: 60px 68px 40px;
-    min-height: 400px;
+    min-height: 500px;
     width: 300px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
 }
 
 .login__container--form {
@@ -70,5 +73,75 @@ body {
     align-items: center;
     font-size: 14px;
     margin-bottom: 10px;
+}
+
+.login__container--social-media > div > img {
+    width: 30px;
+    margin-right: 10px;
+}
+
+.login__container--register {
+    font-size: 14px;
+}
+
+.login__container--register a {
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    text-decoration: none;
+}
+
+.login__container--register a:hover {
+    text-decoration: underline;
+}
+
+.input {
+    background: transparent;
+    border: none;
+    border-bottom: 2px solid white;
+    font-size: 16px;
+    font-family: 'Muli', sans-serif;
+    margin-bottom: 20px;
+    padding: 0 20px;
+    outline: none;
+    height: 50px;
+}
+::placeholder {
+    color: white;
+}
+
+.button {
+    background: rgba(255, 255, 255, .3);
+    border: none;
+    border-radius: 25px;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 15px 0;
+    font-family: 'Muli', sans-serif;
+    letter-spacing: 1px;
+    margin: 10px 0;
+}
+
+.footer {
+    background: #21c08b;
+    display: flex;
+    align-items: center;
+    height: 100px;
+    width: 100%;
+}
+
+
+.footer a {
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 0 30px;
+    text-decoration: none;
+}
+
+.footer a:hover {
+    text-decoration: underline;
 }
 
