--- a/FontendPlatzi/css/login.css
+++ b/FontendPlatzi/css/login.css
@@ -146,3 +146,17 @@ body {
     text-decoration: underline;
 }
 
+@media only screen and (max-width: 600px) {
+    .login__container {
+        background: transparent;
+        border: none;
+        padding: 0;
+        width: 100%;
+    }
+
+    .footer {
+        align-items: flex-start;
+        flex-direction: column;
+    }
+}
+
