--- a/FontendPlatzi/css/style.css
+++ b/FontendPlatzi/css/style.css
@@ -69,7 +69,7 @@ body {
 /* Seccion del main */
 
 .main {
-    height: 300px;
+    height: 180px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -101,15 +101,20 @@ body {
 
 .carousel {
     width: 100%;
-    overflow: scroll;
+    overflow-x: hidden;
     padding: 30px;
     position: realtive;
+    padding: 0 30px;
 }
 
 .carousel__container {
     white-space: nowrap;
     margin: 70px 0;
     padding-bottom: 10px;
+}
+
+.carousel__container h2 {
+    color: white;
 }
 
 .carousel-item {
@@ -165,3 +170,25 @@ body {
 .carousel-item__details:hover {
     opacity: 1;
 }
+
+.footer {
+    background: #6134CB;
+    display: flex;
+    align-items: center;
+    height: 100px;
+    width: 100%;
+}
+
+
+.footer a {
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 0 30px;
+    text-decoration: none;
+}
+
+.footer a:hover {
+    text-decoration: underline;
+}
+
